# PySIFT

./: .gitignore  .readthedocs.yaml  README.md  config.yaml  pyproject.toml  requirements.txt  test.py
benchmarks/: README.md  config_1_opencv_baseline.json  config_2_pysift_classical.json  config_3_pysift_orinet.json  config_4_pysift_hardnet.json  config_5_pysift_lightglue.json  config_6_pysift_orinet_hardnet.json  config_7_pysift_full_hybrid.json  config_8_superpoint.json
determinism_reference/: hpatches_i_ajuntament.npz  hpatches_i_autannes.npz  hpatches_i_bologna.npz  hpatches_i_books.npz  hpatches_i_boutique.npz  hpatches_i_bridger.npz  hpatches_i_brooklyn.npz  hpatches_i_castle.npz  hpatches_i_chestnuts.npz  hpatches_i_contruction.npz  hpatches_v_abstract.npz  hpatches_v_adam.npz  hpatches_v_astronautis.npz  hpatches_v_bark.npz  hpatches_v_bees.npz  hpatches_v_beyus.npz  hpatches_v_bip.npz  imc_british_museum.npz  imc_florence_cathedral_side.npz  imc_st_pauls_cathedral.npz  manifest.json
docs/: index.html  robots.txt  sitemap.xml
examples/: quick_test.py  stitch_demo.py
pysift/: __init__.py  core.py
results/: README.md  summary.csv
rtd/: api.rst  architecture.rst  benchmarks.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt  use-cases.rst
tests/: cross_determinism_test.ypc  quick_smoke_test.py
